--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,7 +19,11 @@ classifiers = [
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]
-dependencies = ["n2w", "numpy"]
+dependencies = [
+    "n2w",
+    "numpy",
+    "lcommon@git+https://github.com/serhez/lcommon.git",
+]
 
 [project.urls]
 Homepage = "https://github.com/serhez/lmethods"
